--- a/src/ui/popup/popup.css
+++ b/src/ui/popup/popup.css
@@ -63,5 +63,35 @@
   height: 100px;
 }
 #screen-settings {
-  width: 300px;
+  width: 250px;
+}
+
+#screen-focus,
+#screen-pause {
+  width: 250px;
+  height: 250px;
+}
+
+#countdown-timer-focus,
+#countdown-timer-pause {
+  position: relative;
+  top: 60%;
+  text-align: center;
+  font-size: 20px;
+}
+
+#settings-button-focus,
+#settings-button-pause {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  padding: 5px;
+}
+
+#skip-focus-button,
+#skip-pause-button {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  padding: 5px;
 }
