--- a/src/ui/popup/popup.css
+++ b/src/ui/popup/popup.css
@@ -3,21 +3,11 @@
   font-weight: bold;
   padding: 8px;
   text-align: center;
+  padding-bottom: 30px;
 }
 
-.textbox {
-  width: 100%;
-  font-size: 12px;
-  margin: 0;
-  padding: 0px 2px;
-}
-
-.textbox:focus {
-  outline: 0;
-  border-color: #66afe9;
-}
-
-.button {
+#begin-button,
+#start-button {
   display: inline-block;
   align-items: center;
   border-radius: 4px;
@@ -25,12 +15,23 @@
   border: none;
   color: #ffffff;
   text-align: center;
-  font-size: 14px;
+  font-size: 12px;
   padding: 10px 16px;
-  width: 120px;
+  width: 80px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+}
+
+#begin-button {
+  position: absolute;
+  display: inline-block;
+  vertical-align: center;
+}
+
+#start-button {
+  position: relative;
+  left: 60%;
 }
 
 .button span {
@@ -59,8 +60,8 @@
 }
 
 #screen-welcome {
-  width: 130px;
-  height: 100px;
+  width: 250px;
+  height: 250px;
 }
 #screen-settings {
   width: 250px;
@@ -94,4 +95,63 @@
   bottom: 5px;
   right: 5px;
   padding: 5px;
+}
+
+.study-time-row label,
+.pause-time-row label,
+.cycle-number-row label {
+  width: 80px; /* oder eine andere feste Breite */
+  flex-shrink: 0;
+}
+.focus-time-container,
+.pause-time-container,
+.cycle-number-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.focus-time-container div,
+.pause-time-container div,
+.cycle-number-container div {
+  width: 25px;
+  text-align: center;
+}
+
+.study-time-row,
+.pause-time-row,
+.cycle-number-row {
+  display: flex;
+  font-size: 15px;
+  gap: 20px;
+  padding-bottom: 30px;
+}
+
+#increase-study-time,
+#decrease-study-time,
+#increase-pause-time,
+#decrease-pause-time,
+#increase-cycle-number,
+#decrease-cycle-number {
+  border: 0.1rem solid rgb(0, 158, 211);
+  background-color: white;
+  padding: 6px;
+  transition: transform 0.1s ease, box-shadow 0.1s ease;
+  cursor: pointer;
+}
+#increase-study-time:active,
+#decrease-study-time:active,
+#increase-pause-time:active,
+#decrease-pause-time:active,
+#increase-cycle-number:active,
+#decrease-cycle-number:active {
+  transform: scale(0.95);
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+#study-time-display,
+#pause-time-display,
+#cycle-number-display {
+  border: 0.1rem solid rgb(0, 158, 211);
+  padding: 8px;
 }
