--- a/src/ui/popup/popup.css
+++ b/src/ui/popup/popup.css
@@ -59,18 +59,17 @@
   right: 0;
 }
 
-#screen-welcome {
-  width: 250px;
-  height: 250px;
-}
-#screen-settings {
-  width: 250px;
-}
-
+#screen-welcome,
 #screen-focus,
 #screen-pause {
   width: 250px;
   height: 250px;
+}
+
+#screen-settings,
+#screen-blocking-websites {
+  width: 300px;
+  height: 300px;
 }
 
 #countdown-timer-focus,
@@ -154,4 +153,43 @@
 #cycle-number-display {
   border: 0.1rem solid rgb(0, 158, 211);
   padding: 8px;
+}
+
+#navbar {
+  background-color: white;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #ddd;
+}
+
+#navbar ul {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#navbar li a {
+  text-decoration: none;
+  color: #888;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  transition: color 0.2s ease-in-out;
+}
+
+#navbar li a:hover {
+  color: #444;
+}
+
+#navbar i {
+  font-size: 16px;
+}
+
+.navbar a.active {
+  color: #2b67f6;
+  font-weight: 600;
 }
